# arch-site-model

./: %OUT%  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  arch-site-model_Phase상세.md  arch-site-model_설계사양서.md  pyproject.toml  requirements-dev.txt  requirements.txt  spec.md
.github/workflows/: deploy.yml
docs/: dem_dsm_strategy.md  deploy.md  kbs_topomap_reference.md  orthophoto_texture_plan.md  road_surface_plan.md  sketchup_extension.md  trust_and_utilization_roadmap.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Viewer3D.tsx
geo_store/: dem_daejeon_36710065_66.tif  dem_daejeon_r0c0.tif  dem_daejeon_r1c3.tif  manifest.json  road_manifest.json  water_manifest.json
reference/: README.md  ngii_layer_codes.csv  ngii_layer_codes.json
scripts/: dem_staircase.py  dem_to_cog.py
sketchup_ext/: arch_site_model.rb  build_rbz.py
sketchup_ext/arch_site_model/: api_client.rb  builder.rb  dialog.html  main.rb  settings.rb
src/: __init__.py  api.py  config.py  pipeline.py  preview.py  qa.py  server.py  site_check.py  solar.py  tiles.py  tiles_stream.py  trust_report.py
src/data/: __init__.py
tests/: conftest.py  test_api.py  test_bbox.py  test_building.py  test_cadastral.py  test_config.py  test_contour_bake.py  test_crs.py  test_dem.py  test_dem_to_cog.py  test_geocode.py  test_integration_api.py  test_ortho.py  test_pipeline.py  test_preview.py  test_proposal.py  test_qa.py  test_rhino.py  test_road.py  test_road_bake.py  test_road_tiling.py  test_seating.py  test_setback.py  test_site_check.py  test_skp_mcp.py  test_skyline.py  test_solar.py  test_store.py  test_terrain_mesh.py  test_tiles.py  test_tiles_stream.py  test_trust_report.py  test_vworld.py  test_water.py  test_zoning.py
(+33 files in other folders)
