[project]
name = "arch-site-model"
version = "0.0.0"
description = "주소 입력으로 주변 지형·건물 3D 대지모델을 자동 생성하는 MCP 서버"
requires-python = ">=3.11"
dependencies = [
    "pyproj>=3.6",        # EPSG:5186 ↔ 4326 좌표변환
    "mcp>=1.2",           # FastMCP 서버
    "python-dotenv>=1.0", # .env 로드
    "requests>=2.31",     # VWorld API 호출
    "shapely>=2.0",       # bbox 포함 판정 (지형 타일 조회)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Phase 2+ 에서 추가될 예정:
#   geopandas, shapely  — .shp/폴리곤 처리
#   rhino3dm            — .3dm 출력
#   rasterio            — DEM 클립

[project.scripts]
arch-site-model = "src.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.geo", "src.data", "src.geometry", "src.output", "src.terrain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
